# jadio-recorder

./: .gitignore  README.md  pyproject.toml  setup.cfg
data/configs/: group.json  reserve.json  service.json
docker/: .env  Dockerfile  docker-compose.yml  jadio-recorder-periodic.sh  jadio-recorder.sh  jpradio-recorder.sh
docker/scripts/: jadio-cron.sh  jadio-group.sh  jadio-reserve.sh
docker/svr/jpradio-recorder/: config.json  queries.json
src/jadio_recorder/: __init__.py  api.py  cli.py  config.py  configs.py  database.py  podcast.py  program_category.py  program_group.py  program_query.py  query.py  recorder.py
src/jadio_recorder/handlers/: __init__.py  base.py  feeder.py  recorder.py
src/jpradio_recorder/: __init__.py  cli.py  database.py  documents.py  entrypoints.py  query.py  recorder.py  reservation_conditions.py  util.py
