[metadata]
name = jpradio-recorder
version = attr: jpradio_recorder._version.__version__
author = hejyll
author_email = hejyll@gmail.com
url = https://github.com/hejyll/jpradio-recorder
description = file: README.md
long_description_content_type = text/markdown
keywords = radio
license = CC0 1.0
classifiers =
    License :: OSI Approved :: Creative Commons Zero v1.0 Universal
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages = find:
zip_safe = False
install_requires =
    jpradio @ git+https://github.com/hejyll/jpradio
    pymongo==4.3.2
    tqdm==4.36.1

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev = 
    black==22.10.0
    isort==5.10.1
    pytest==7.2.0

[options.entry_points]
console_scripts =
    jpradio-recorder = jpradio_recorder.cli:main
