[metadata]
name = jadio-recorder
version = attr: jadio_recorder._version.__version__
author = hejyll
author_email = hejyll@gmail.com
url = https://github.com/hejyll/jadio-recorder
description = file: README.md
long_description_content_type = text/markdown
keywords = radio
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
zip_safe = False
install_requires =
    jadio @ git+https://github.com/hejyll/jadio@v1.0.0
    feedgen==1.0.0
    pymongo==4.3.2
    pytz==2023.3.post1
    tqdm==4.36.1

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.extras_require]
dev = 
    black==22.10.0
    isort==5.10.1
    pytest==7.2.0

[options.entry_points]
console_scripts =
    jadio = jadio_recorder.cli:main
